# SwarmUS-ROS

./: .clang-format  .gitignore  .gitmodules  README.md  THIRD-PARTY-NOTICES.md  haros_config.yaml  lgtm.yml  rgbd_test_config.rviz
Buzz_gazebo/: CMakeLists.txt  HelloBuzz.launch  package.xml
Buzz_gazebo/buzz_scripts/: HelloBuzz.bzz  Square.bzz
Buzz_gazebo/include/: BuzzBridge.hpp  BuzzUtility.hpp  buzz_utility.hpp
Buzz_gazebo/launch/: HelloBuzz.launch
Buzz_gazebo/launch/launch_config/: test.yaml
Buzz_gazebo/src/: BuzzBridge.cpp  BuzzUtility.cpp  ROSBuzz.cpp  buzz_utility.cpp
src/hive_mind_bridge/: CMakeLists.txt  package.xml
src/hive_mind_bridge/cmake/: propolis.cmake
src/hive_mind_bridge/config/: hive_mind_bridge_params.yaml
src/hive_mind_bridge/launch/: hive_mind_bridge.launch  hiveboard_bridge.launch  queue_and_send_integration_test.launch  socket_to_move_by_integration_test.launch
src/hive_mind_bridge/src/: HiveMindBridge.cpp  HiveMindBridgeImpl.cpp  InboundRequestHandle.cpp  InboundResponseHandle.cpp  MessageHandler.cpp  MessageHandlerResult.cpp  MessageUtils.cpp  OutboundRequestHandle.cpp  TCPServer.cpp  UserCallbackArgumentDescription.cpp  UserCallbackArgumentWrapper.cpp  UserCallbackFunctionWrapper.cpp  main.cpp
src/hive_mind_bridge/test/: HiveMindBridgeImplUnitTest.cpp  MessageHandlerUnitTest.cpp  SocketToMoveByIntegrationTest.cpp
src/hive_mind_bridge/test/utils/: Logger.h  TCPClient.h
src/hiveboard_bridge/: CMakeLists.txt  package.xml
src/hiveboard_bridge/cmake/: propolis.cmake
src/hiveboard_bridge/launch/: hiveboard_bridge.launch  socket_to_moveBy_integration_test.launch  socket_to_move_by_integration_test.launch
src/hiveboard_bridge/src/: HiveBoardBridge.cpp  HiveBoardBridgeFactory.cpp  HiveBoardBridgeImpl.cpp  HiveMindBridge.cpp  HiveMindBridgeImpl.cpp  ITCPServerMonitor.h  MessageHandler.cpp  MessageUtils.cpp  ReceiveAction.cpp  ReceiveThreadAction.cpp  StreamListener.cpp  TCPServer.cpp  TCPServerMonitor.cpp  TCPSocket.cpp  TCPSocket.h  ThreadWrapper.cpp  main.cpp
src/hiveboard_bridge/test/: HiveBoardBridgeImplUnitTest.cpp  HiveBoardBridgeUnitTest.cpp  HiveMindBridgeImplUnitTest.cpp  MessageHandlerUnitTest.cpp  ReceiveThreadActionUnitTest.cpp  SocketToMoveByIntegrationTest.cpp  StreamListenerUnitTest.cpp
src/pioneer_2_dx/pioneer_2dx_description/: CMakeLists.txt  package.xml
src/pioneer_2_dx/pioneer_2dx_slam/: CMakeLists.txt  package.xml
src/pioneer_2dx/pioneer_2dx/: CMakeLists.txt  package.xml
src/pioneer_2dx/pioneer_2dx_meta_real/: CMakeLists.txt  package.xml
src/pioneer_2dx/pioneer_2dx_meta_sim/: CMakeLists.txt  package.xml
src/pioneer_2dx/pioneer_2dx_msgs/: CMakeLists.txt  package.xml
src/pioneer_2dx/pioneer_2dx_simulation/: CMakeLists.txt  package.xml
src/pioneer_2dx/pioneer_2dx_swarmus/: CMakeLists.txt  package.xml
src/pioneer_2dx/pioneer_2dx_swarmus_sim/: CMakeLists.txt  package.xml
src/pioneer_2dx/pioneer_2dx_visualization/: package.xml
src/swarmus_example_pkg/: CMakeLists.txt  package.xml
src/swarmus_example_pkg/src/: DummyUtils.cpp  HiveMindConnectorDummy.cpp  hive_mind_connector_dummy.cpp
src/swarmus_example_pkg/test/: DummyUtilsTests.cpp
src/swarmus_ros_description/: package.xml
src/swarmus_ros_description/urdf/: pioneer.urdf.xacro
src/swarmus_ros_navigation/: CMakeLists.txt  README.md  package.xml
src/swarmus_ros_navigation/config/: .costmap_common_params.yaml.swp  base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params_pioneer.yaml  global_costmap_params.yaml  global_costmap_with_map_params.yaml  local_costmap_params.yaml  move_base_params_pioneer.yaml
src/swarmus_ros_navigation/include/: Navigation.hpp
src/swarmus_ros_navigation/launch/: navigation.launch  rtabmap.launch  rviz_agent1.launch  rviz_pioneer_0.launch  rviz_pioneer_0_rtabmap.launch  rviz_pioneer_1_rtabmap.launch  rviz_pioneer_2.launch  rviz_pioneer_2_rtabmap.launch
src/swarmus_ros_navigation/rviz/: agent_1_config.rviz  agent_1_config_rtabmap.rviz  pioneer_0_config.rviz  pioneer_0_config_rtabmap.rviz  pioneer_0_config_test.rviz  pioneer_1_config.rviz  pioneer_1_config_rtabmap.rviz  pioneer_2_config.rviz  pioneer_2_config_rtabmap.rviz
src/swarmus_ros_navigation/src/: Navigation.cpp  main.cpp
src/swarmus_ros_simulation/: CMakeLists.txt  README.md  package.xml
src/swarmus_ros_simulation/launch/: 2agent.launch  agent_cell_obstacles.launch  follow_leader.launch  hive_mind_bridge.launch  hive_mind_connector_dummy.launch  multirobot_empty.launch  multirobot_garage.launch  pioneer_spawner.launch  rviz_pioneer_0.launch  simple_robot_simulation.launch  simple_swarm.launch  simulated_agent.launch  single_robot_tunnel.launch  slam_from_cell.launch  slam_simulation.launch  teleop_from_cell.launch  teleop_from_cell_multi_robot.launch  teleop_from_phone_multi_robot.launch  teleop_from_tcp.launch
src/swarmus_ros_simulation/meshes/: tunnels.dae
src/swarmus_ros_simulation/msg/: Communication.msg  InterLocalization.msg  InterLocalization_grid.msg
src/swarmus_ros_simulation/rviz/: pioneer_0_config.rviz
src/swarmus_ros_simulation/src/: communicationBroker.cpp  interCommunication.cpp  interLocalization.cpp  tf_publisher.cpp
src/swarmus_ros_simulation/worlds/: obstacles.world  tunnels.world
src/swarmus_turtlebot/: CMakeLists.txt  package.xml  readme.md  swarmus-turtlebot.service
src/swarmus_turtlebot/launch/: full_turtlebot_swarm_bringup.launch  move_base.launch  rviz.launch  turtlebot.launch
src/swarmus_turtlebot/msg/: MoveByMessage.msg
src/swarmus_turtlebot/param/: costmap_common_params_burger.yaml
src/swarmus_turtlebot/src/: Navigation.cpp  main.cpp
src/swarmus_turtlebot/tools/: 50-cloud-init.yaml
swarmus_ros_navigation/: CMakeLists.txt  package.xml
swarmus_ros_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  rviz_navigation1.rviz  rviz_navigation2.rviz
swarmus_ros_navigation/include/: Navigation.hpp
swarmus_ros_navigation/launch/: navigation.launch
swarmus_ros_navigation/src/: Navigation.cpp
(+497 files in other folders)
