<?xml version="1.0"?>
<package format="2">
  <name>hive_mind_bridge</name>
  <version>1.0.0</version>
  <description>The interface used to interact with a HiveBoard</description>

  <maintainer email="swarmus@usherbrooke.ca">SwarmUS</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>pioneer_2dx_msgs</depend>


  <export>
  </export>
</package>
