<?xml version="1.0"?>
<package format="2">
  <name>swarmus_example_pkg</name>
  <version>0.0.0</version>
  <description>
    This dummy package is for internal use only and serves documentation purposes.
    It shows how to create and organise packages.

    This package has a dependency on the hive_mind package.
  </description>

  <maintainer email="swarmus@usherbrooke.ca">SwarmUS</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hive_mind</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>hive_mind</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>hive_mind</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  
  <export>

  </export>
</package>
