<?xml version="1.0"?>
<package format="2">
  <name>swarmus_ros_description</name>
  <version>0.0.0</version>
  <description>The swarmus_ros_description package</description>

  <maintainer email="swarmus@usherbrooke.ca">SwarmUS</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>controller_manager</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  
</package>
