<?xml version="1.0"?>
<package format="2">
  <name>swarmus_ros_simulation</name>
  <version>0.0.0</version>
  <description>The swarmus_ros_simulation package</description>

  <maintainer email="swarmus@usherbrooke.ca">SwarmUS</maintainer>

  <license>MIT</license>

  <build_export_depend>message_generation</build_export_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hive_mind</exec_depend>
  <exec_depend>hive_connect</exec_depend>
  <exec_depend>hive_mind_bridge</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>pioneer_2dx_description</exec_depend>
  <exec_depend>pioneer_2dx_simulation</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
