<?xml version="1.0"?>
<package format="2">
  <name>swarmus_ros_simulation</name>
  <version>0.0.0</version>
  <description>The swarmus_ros_simulation package</description>

  <maintainer email="swarmus@usherbrooke.ca">SwarmUS</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_msgs</depend>
  <depend>message_runtime</depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>swarmus_emulation</exec_depend>
  <exec_depend>pioneer_2dx_swarmus_sim</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/meshes"/>
    <gazebo_ros gazebo_media_path="${prefix}/meshes"/>
  </export>
  
</package>
