<?xml version="1.0"?>
<package format="2">
  <name>swarmus_turtlebot</name>
  <version>0.0.0</version>
  <description>The swarmus_turtlebot package</description>
  <maintainer email="swarmus@usherbrooke.ca">SwarmUS</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>move_base</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>navigation</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
  <exec_depend>turtlebot3_slam</exec_depend>

  <export>
  </export>
</package>
