<?xml version="1.0"?>
<package format="2">
  <name>pioneer_2dx_msgs</name>
  <version>1.0.0</version>
  <description>Definition and building of all custom messages used by the Pioneer 2Dx</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="etienne.villemure@usherbrooke.ca">etienne</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>
