<?xml version="1.0"?>
<package format="2">
  <name>pioneer_2dx_simulation</name>
  <version>1.0.0</version>
  <description>Bringup package for the simulated services of the pioneer 2Dx</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="etienne.villemure@usherbrooke.ca">Etienne Villemure</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>pioneer_2dx_navigation</exec_depend>
  <exec_depend>pioneer_2dx_slam</exec_depend>
  <exec_depend>pioneer_2dx_description</exec_depend>
  <exec_depend>robot_localization</exec_depend>

</package>
