<?xml version="1.0"?>
<package format="2">
  <name>pioneer_2dx_swarmus</name>
  <version>1.0.0</version>
  <description>Wrapper package that contains the Pioneer 2dx and the SwarmUS bridge</description>

  <maintainer email="etienne.villemure@usherbrooke.ca">Étienne Villemure</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>hive_mind_bridge</exec_depend>
  <exec_depend>pioneer_2dx_bringup</exec_depend>

</package>
