<?xml version="1.0"?>
<package format="2">
  <name>pioneer_2dx_swarmus_sim</name>
  <version>0.0.0</version>
  <description>The pioneer_2dx_swarmus_sim package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="etienne.villemure@usherbrooke.ca">Étienne Villemure</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>swarmus_emulation</exec_depend>
  <exec_depend>pioneer_2dx_simulation</exec_depend>

</package>
