<?xml version="1.0"?>
<package format="2">
  <name>pioneer_2dx_visualization</name>
  <version>1.0.0</version>
  <description>Configurations of the Rviz interfaces for the Pioneer 2Dx of the SwarmUS team</description>

  <maintainer email="etienne.villemure@usherbrooke.ca">etienne</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rviz</depend>

  <depend>move_base</depend>
  <depend>move_base_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>global_planner</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

</package>
